Atualização: inclusão de icones de rede social

--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
   </main>
 
   <footer>
+    <div class="rodape">
+    <div class="icons">
+    <a href="https://github.com/ChrisPCruz99">
+      <img class="tm-social" src="./assets/logotipo-do-github.png" alt="Logo Github"></a>
+      <a href="https://www.linkedin.com/in/christian-patrick-992816260/">
+      <img class="tm-social" src="./assets/logotipo-do-linkedin.png" alt="Logo instagran"></a>
+    </div>
+    <div>
     <p>Todos os direitos reservados Christian Patrick &copy;</p>
+  </div>
+</div>
   </footer>
 </body>
 </html>
